--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -5097,7 +5097,7 @@ $$\bs w(\bs f) = \frac{V^{-1}\bs f}{\bs f^T V^{-1} \bs f}$$</p>
 <p>$$\bs w(a\bs f) = \frac{1}{a} \bs w(\bs f)$$ </p>
 <ul>
 <li>the portfolio $\bs w$ and $\frac{1}{a} \bs w$ has no material difference </li>
-<li>no difference after the scaling to match the dollar amount to be invested</li>
+<li>identical after the scaling to match the dollar amount to be invested</li>
 </ul>
 <p>Therefore, the return forecast $\bs f$ is only meaningful in a relative sense:</p>
 <ul>
