--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -8090,6 +8090,7 @@ $$</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="allocation-summary">Allocation Summary</h2>
+<p><small></p>
 <table>
 <thead>
 <tr>
@@ -8152,12 +8153,13 @@ $$</p>
 </tr>
 </tbody>
 </table>
+<p></small></p>
 <p>C-Shapley/CAS allocation:</p>
 <ul>
 <li>stands out with the best set of features</li>
 <li>a candidate for universal risk capital allocation method<ul>
 <li>applicable to a wide variety of risk capital metrics in banks</li>
-<li>applicable to the risk allocations of buy side firms&#39; multiple trading strategies</li>
+<li>applicable to the risk allocations of multiple trading strategies</li>
 </ul>
 </li>
 </ul>
@@ -8407,10 +8409,6 @@ $$</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="assignments">Assignments</h1>
-<p>Recommended readings</p>
-<ul>
-<li><a href=http://www.aclweb.org/anthology/W03-1018>&quot;Evaluation and Extension of Maximum Entropy Models with Inequality Constraints&quot;</a>, Kazama and Tsujii</li>
-</ul>
 <p>Homework</p>
 <ul>
 <li>Complete <a href="http://yadongli.github.io/nyumath2048/">homework set 10</a></li>
