--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -8091,6 +8091,8 @@ $$</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="allocation-summary">Allocation Summary</h2>
 <p><small></p>
+<center>
+
 <table>
 <thead>
 <tr>
