--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -8155,7 +8155,8 @@ $$</p>
 </tr>
 </tbody>
 </table>
-<p></small></p>
+<p></center>
+</small></p>
 <p>C-Shapley/CAS allocation:</p>
 <ul>
 <li>stands out with the best set of features</li>
