--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -8094,8 +8094,8 @@ $$</p>
 <thead>
 <tr>
 <th style="text-align:center">Criteria</th>
-<th style="text-align:center">C-Shapley (CAS)</th>
-<th style="text-align:center">A-S (Euler)</th>
+<th style="text-align:center">C-S/CAS</th>
+<th style="text-align:center">A-S/Euler</th>
 <th style="text-align:center">Shapley</th>
 <th style="text-align:center">Standalone</th>
 </tr>
