--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -8022,7 +8022,7 @@ $$</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="business-incentives">Business Incentives</h2>
+<h2 id="business-incentives">Business incentives</h2>
 <p>We take the following simple bank as an example:</p>
 <p><img src="img/alloc-abc.png" width=300> </p>
 <p>The covariance matrix between the returns of three businesses are:</p>
@@ -8066,7 +8066,7 @@ $$</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="allocation-comparisons">Allocation Comparisons</h2>
+<h2 id="allocation-comparison">Allocation comparison</h2>
 <table style="border-style:hidden">
 <tr style="border-style:hidden">
 
@@ -8091,7 +8091,7 @@ $$</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="allocation-summary">Allocation Summary</h2>
+<h2 id="allocation-summary">Allocation summary</h2>
 <table>
 <thead>
 <tr>
@@ -8285,7 +8285,7 @@ $$</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="efficiency-and-separability">Efficiency and Separability</h2>
+<h2 id="efficiency-and-separability">Efficiency and separability</h2>
 <p>For separable metrics, CAS allocation reduces to:</p>
 <p>$$\mathbb{E}\left[\bs u^T(\bs w_B | \bs w_A)\right] = \mathbb{E}\left[\int_0^1 \frac{\partial c(\bs w_A + q\bs w_B)}{\partial (q \bs w_B )} dq \right] = \mathbb{E}\left[\int_0^1 \bs a^T(\bs w_A + q\bs w_B) dq \right] S $$</p>
 <ul>
