Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 </td>
 </tr>
 <tr>
-<td align="center">4. Rootfinding and Interpolation</td>
+<td align="center">4. Rootfinding &amp; Interpolation</td>
 <td align="center">
 <a href="Lecture4.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture4.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework4.ipynb">homework</a>
 </td>
@@ -122,6 +122,12 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <td align="center">13. PDE II</td>
 <td align="center">
 <a href="Lecture13.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture13.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework8.ipynb">homework</a>
+</td>
+</tr>
+<tr>
+<td align="center">10. Entropy &amp; Allocation</td>
+<td align="center">
+<a href="Lecture10.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture10.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework10.ipynb">homework</a>
 </td>
 </tr>
 </tbody>
