--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -3835,7 +3835,7 @@ wsm5mZmZmVlJODk3MzMzMysJJ+dmZmZmZiXh5NzMzMzMrCT+PxAS0+2jChtnAAAAAElFTkSuQmCC
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="use-the-prior-belief">Use the prior belief</h2>
-<p>We can take advantage of the prior belief that the stock return is lognormal, and use the observed ATM vol in the prior.  </p>
+<p>We can take advantage of the prior belief that the stock return is normal, and use the observed ATM vol in the prior.  </p>
 <ul>
 <li>The resulting distribution and volatility skew are reasonble</li>
 <li>The whole vol skew curve is inferred from three option prices</li>
