--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -7721,10 +7721,10 @@ $\bs u^T = \int_0^1 \frac{\partial c(q\bs w)}{\partial (q \bs w)} dq $,
 <p>If the cost function is homogeneous, ie, $c(q \bs w) = q c(\bs w)$, the A-S allocation reduces to the Euler allocation:</p>
 <p>$$ \bs u^T = \int_0^1 \frac{\partial c(q\bs w)}{\partial (q \bs w)} dq = \int_0^1 \frac{\partial c(\bs w)} { \partial \bs w} dq  = \frac{ \partial c(\bs w)} {\partial \bs w} $$</p>
 <ul>
-<li>In practice, most risk capital metrics are homogenous</li>
+<li>In practice, most risk capital metrics are homogeneous</li>
 <li>Euler allocation is by trades&#39; marginal contribution</li>
 <li>A-S/Euler allocation are computationtally efficient<ul>
-<li>no Monte Carlo required</li>
+<li>no need for Monte Carlo</li>
 </ul>
 </li>
 </ul>
