Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 
 <p>Python is the primary programming tool for this class. The following is a step by step instruction on how to set up the right Python environment for the class.</p>
 
-<p><a href="PythonSetup.slides.html">Python setup instructions </a></p>
+<p><a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/PythonSetup.ipynb">Python setup instructions </a></p>
 
 <h2>
 <a id="how-to-saveprint-slides-as-pdf" class="anchor" href="#how-to-saveprint-slides-as-pdf" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to save/print slides as PDF</h2>
