--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -4900,7 +4900,7 @@ $$\mathbb{E}[L\bs \epsilon  (L\bs \epsilon)^T] = \mathbb{E}[L\bs{\epsilon  \epsi
 <h2 id="scalar-function">Scalar function</h2>
 <p>$$f(\bs x) = f(x_1, ..., x_n)$$</p>
 <ul>
-<li>Derivative to vector (Gradient): $\frac{\partial f}{\partial \bs x} = \nabla f = [\frac{\partial f}{\partial x_1}, ..., \frac{\partial f}{\partial x_1}]$</li>
+<li>Derivative to vector (Gradient): $\frac{\partial f}{\partial \bs x} = \nabla f = [\frac{\partial f}{\partial x_1}, ..., \frac{\partial f}{\partial x_n}]$</li>
 <li>Note that $\frac{\partial f}{\partial \bs x}$ is a <strong>row vector</strong>, whenever the vector or matrix appears in the denominator of differentiation, the result is transposed.</li>
 </ul>
 </div>
