--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -7396,7 +7396,7 @@ bq5Lq0wAAAAASUVORK5CYII=
 <li>allocated capital is actively managed by business heads</li>
 <li>allocation method directly affects trading desks&#39; behaviour</li>
 <li>allocation method should incentivize risk reduction<ul>
-<li>a business unit&#39;s action to reduce the firm&#39;s overall risk should also reduce its own allocaton</li>
+<li>a business unit&#39;s action to reduce the firm&#39;s overall risk should also reduce its own allocation</li>
 </ul>
 </li>
 </ul>
@@ -7502,7 +7502,7 @@ $$
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="a-model-for-fairness">A model for fairness</h2>
-<p>In cooperative game theory, Fairness is defined by the following axioms:</p>
+<p>In cooperative game theory, fairness is modeled by the following axioms:</p>
 <ul>
 <li>efficiency: allocations sum up to total</li>
 <li>symmetry: if two units&#39; contribution are identical to any arbitrary subsets of units, their allocations are the same</li>
