--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -3142,7 +3142,7 @@ v &amp;= \log \left(\bs q^T \exp(-A^T \bs u)\right) - 1 \\
 <li>Once we find the optimal $\bs u^*$ that minimizes the dual objective:</li>
 </ul>
 <p>$$
-\bs p^* = \frac{\exp(- A^T \bs u^*)}{\bs 1^T \exp(- A^T \bs u^*)}
+\bs p^* = \frac{\bs q \cdot \exp(- A^T \bs u^*)}{\bs q^T \exp(- A^T \bs u^*)}
 $$</p>
 </div>
 </div>
