credit to Yishen

--- a/Lecture10.slides.html
+++ b/Lecture10.slides.html
@@ -7672,7 +7672,7 @@ $$
 $$</p>
 <ul>
 <li>$\bs u$ is the allocation per unit notional of instruments</li>
-<li>the allocation to individual trades in the i-th unit are $\bs u \odot \bs w_i$, where $\odot$ is element-wise multiplication</li>
+<li>the allocation to individual trades in the i-th unit are $\bs u \odot \bs w_i$</li>
 <li>the allocation to a portfolio is therefore $\xi_i = \bs u^T \bs w_i$.</li>
 <li>Associative by construction: inherited from vector summation</li>
 </ul>
