Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Scientific Computing in Finance : Math-GA 2048, New York University, Spring 2015">
+    <meta name="description" content="Scientific Computing in Finance : Math-GA 2048, New York University, Spring 2016">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/yadongli/nyumath2048">View on GitHub</a>
 
           <h1 id="project_title">Scientific Computing in Finance</h1>
-          <h2 id="project_tagline">Math-GA 2048, New York University, Spring 2015</h2>
+          <h2 id="project_tagline">Math-GA 2048, New York University, Spring 2016</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/yadongli/nyumath2048/zipball/master">Download this project as a .zip file</a>
@@ -46,94 +46,11 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 
 <p>Lecture slides and homework will be published weekly before the Wednesday lecture. </p>
 
-<p></p>
-
-<table>
-<thead>
-<tr>
-<th align="center">Lecture</th>
-<th align="center">Materials</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td align="center">1. Introduction</td>
-<td align="center">
-<a href="Lecture1.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture1.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework1.ipynb">homework</a>
-</td>
-</tr>
-<tr>
-<td align="center">2. Linear Algebra I</td>
-<td align="center">
-<a href="Lecture2.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture2.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework2.ipynb">homework</a>
-</td>
-</tr>
-<tr>
-<td align="center">3. Linear Algebra II</td>
-<td align="center">
-<a href="Lecture3.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture3.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework3.ipynb">homework</a>
-</td>
-</tr>
-<tr>
-<td align="center">4. Rootfinding &amp; Interpolation</td>
-<td align="center">
-<a href="Lecture4.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture4.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework4.ipynb">homework</a>
-</td>
-</tr>
-<tr>
-<td align="center">5. Deltas and Hedging</td>
-<td align="center">
-<a href="Lecture5.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture5.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework5.ipynb">homework</a>
-</td>
-</tr>
-<tr>
-<td align="center">6. Monte Carlo</td>
-<td align="center">
-<a href="Lecture6.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture6.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework6.ipynb">homework</a>
-</td>
-</tr>
-<tr>
-<td align="center">7. Variance Reduction</td>
-<td align="center">
-<a href="Lecture7.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture7.ipynb">ipynb</a>), no homework</td>
-</tr>
-<tr>
-<td align="center">8. Optimization</td>
-<td align="center">
-<a href="Lecture8.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture8.ipynb">ipynb</a>)</td>
-</tr>
-<tr>
-<td align="center">9. Linear programming</td>
-<td align="center">
-<a href="Lecture9.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture9.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework7.ipynb">homework</a>
-</td>
-</tr>
-<tr>
-<td align="center">11. ODE</td>
-<td align="center">
-<a href="Lecture11.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture11.ipynb">ipynb</a>)</td>
-</tr>
-<tr>
-<td align="center">12. PDE I</td>
-<td align="center">
-<a href="Lecture12.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture12.ipynb">ipynb</a>)</td>
-</tr>
-<tr>
-<td align="center">13. PDE II</td>
-<td align="center">
-<a href="Lecture13.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture13.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework8.ipynb">homework</a>
-</td>
-</tr>
-<tr>
-<td align="center">10. Entropy &amp; Allocation</td>
-<td align="center">
-<a href="Lecture10.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture10.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework10.ipynb">homework</a>
-</td>
-</tr>
-</tbody>
-</table>
+<p>Old lecture slides for Spring 2015 is available <a href="http://yadongli.github.io/nyumath2048/2015Spring/">here</a></p>
 
 <p></p>
+
+
 
 <h2>
 <a id="python-setup" class="anchor" href="#python-setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python setup</h2>
