Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 
 <p>Lecture slides and homework will be published weekly before the Wednesday lecture. </p>
 
-<p>Old lecture slides for Spring 2015 is available <a href="http://yadongli.github.io/nyumath2048/2015Spring/">here</a></p>
+<p>Old lecture slides for Spring 2015 semester are available <a href="http://yadongli.github.io/nyumath2048/2015Spring/">here</a></p>
 
 <p></p>
 
