--- a/ClassPolicies.slides.html
+++ b/ClassPolicies.slides.html
@@ -306,6 +306,7 @@ $(document).ready(function(){
 <li>both parties will be punished(we can't and don't want to distinguish who copied whom)</li>
 </ul>
 </li>
+<li>Copying from previous' year's homework solution is also considered cheating. </li>
 </ul>
 <p>We will actively police cheating:</p>
 <ul>
